--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,17 @@
 DATABASE_URL=file:./sqlite.db
 PORT=5001
 NEXT_PUBLIC_API_URL=
+
+Self-host Next.js
+https://github.com/leerob/next-s
+
+Include files in the build
+app/db drizzle.config.ts
+
+Pre start shell command
+npm i drizzle-kit && npm run db:
+
+DATABASE_URL=${POSTGRES_URL}
+DATABASE_URL_EXTERNAL=${POSTGRES
+NEXT_PUBLIC_SAFE_KEY=test123
+SECRET_KEY=test456
